Add header and footer

--- a/index.html
+++ b/index.html
@@ -7,35 +7,60 @@
 </head>
 	
 <body>
-	<div id="bg">
-		<div id="main">
+	<div id="container">
+	
+		<!-- Header -->
+		<header>
+			<nav>
+				<div id="nav-brand">NyS</div>
+				<ul id="nav">
+					<li><a href="">About Me</a></li>
+					<li><a href="">Blog</a></li>
+					<li><a href="">Resume</a></li>
+				</ul>
+			</nav>
+		</header>
 
-			<h1>
-				<a id="home_nav" href=""><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
-			</h1>
+		<!-- Main Body -->
+		<div id="content">
+			<div id="main">
 
-			<p id="kicker">developer//designer//dreamer</p>
-			
-			<div id="nav">
+				<!-- Main Heading -->
+				<h1>
+					<a id	="home_nav" href=""><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
+				</h1>
 
-				<h3><a id="github_nav" href=""><img src="img/github_icon.png" alt="github"><span>nathanshin</span></a></h3>
+				<!-- Kicker -->
+				<p id="kicker">developer//designer//dreamer</p>
 
-				<h3><a id="dribbble_nav" href=""><img src="img/dribbble_icon.png" alt="dribbble"><span>nathanshin</span></a></h3>
+				<!-- Social Links -->
+				<div id="nav">
+					<h3><a id="github_nav" href=""><img src="img/github_icon.png" alt="github"><span>nathanshin</span></a></h3>
 
-				<h3><a id="twitter_nav" href=""><img src="img/twitter_icon.png" alt="twitter"><span>nathanshin</span></a></h3>
+					<h3><a id="dribbble_nav" href=""><img src="img/dribbble_icon.png" alt="dribbble"><span>nathanshin</span></a></h3>
 
-				<h3><a id="email_nav" href=""><img src="img/email_icon.png" alt="email"><span>nathanshin@utexas.edu</span></a></h3>
+					<h3><a id="twitter_nav" href=""><img src="img/twitter_icon.png" alt="twitter"><span>nathanshin</span></a></h3>
 
+					<h3><a id="email_nav" href=""><img src="img/email_icon.png" alt="email"><span>nathanshin@utexas.edu</span></a></h3>
+				</div>
 			</div>
 		</div>
-
-		<script src='js/main.js'></script>
 		
-		<div id="preload1"></div>
-		<div id="preload2"></div>
-		<div id="preload3"></div>
-		<div id="preload4"></div>
+		<!-- Footer -->
+		<footer>
+			<p>© 2016 Nathan Shin. All rights reserved. Rails Developer / Front-end specialist</p>
+		</footer>
 
 	</div>
+	
+	<!-- Preload all of the images -->
+	<div id="preload1"></div>
+	<div id="preload2"></div>
+	<div id="preload3"></div>
+	<div id="preload4"></div>
+	
+	<!-- Javascript -->
+	<script src='js/main.js'></script>
+
 </body>
 </html>
