Change kicker color & add links

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	
 <body>
 	<div id="container">
-	
+
 		<!-- Header -->
 		<header>
 			<nav>
-				<div id="nav-brand">NyS</div>
+				<a href=""><div id="nav-brand">NyS</div></a>
 				<ul id="nav">
 					<li><a href="">About Me</a></li>
 					<li><a href="">Blog</a></li>
@@ -27,7 +27,7 @@
 
 				<!-- Main Heading -->
 				<h1>
-					<a id	="home_nav" href=""><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
+					<a id	="home_nav" href="nathanshin.me"><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
 				</h1>
 
 				<!-- Kicker -->
@@ -35,13 +35,13 @@
 
 				<!-- Social Links -->
 				<div id="nav">
-					<h3><a id="github_nav" href=""><img src="img/github_icon.png" alt="github"><span>nathanshin</span></a></h3>
+					<h3><a id="github_nav" href="https://github.com/nathanshin" target="_blank"><img src="img/github_icon.png" alt="github"><span>nathanshin</span></a></h3>
 
-					<h3><a id="dribbble_nav" href=""><img src="img/dribbble_icon.png" alt="dribbble"><span>nathanshin</span></a></h3>
+					<h3><a id="dribbble_nav" href="https://dribbble.com/nathanshin"><img src="img/dribbble_icon.png" alt="dribbble"><span>nathanshin</span></a></h3>
 
-					<h3><a id="twitter_nav" href=""><img src="img/twitter_icon.png" alt="twitter"><span>nathanshin</span></a></h3>
+					<h3><a id="twitter_nav" href="https://twitter.com/nathanshin/" target="_blank"><img src="img/twitter_icon.png" alt="twitter"><span>@nathanshin</span></a></h3>
 
-					<h3><a id="email_nav" href=""><img src="img/email_icon.png" alt="email"><span>nathanshin@utexas.edu</span></a></h3>
+					<h3><a id="email_nav" href="mailto:nathanshin@utexas.edu"><img src="img/email_icon.png" alt="email"><span>nathanshin@utexas.edu</span></a></h3>
 				</div>
 			</div>
 		</div>
