Add nav animations

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			<nav>
 				<a href=""><div id="nav-brand">NyS</div></a>
 				<ul id="nav">
-					<li><a href="">About Me</a></li>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Resume</a></li>
+					<li><a id="about_nav" href="">About Me</a></li>
+					<li><a id="blog_nav" href="">Blog</a></li>
+					<li><a id="resume_nav" href="">Resume</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -27,7 +27,7 @@
 
 				<!-- Main Heading -->
 				<h1>
-					<a id	="home_nav" href="nathanshin.me"><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
+					<a id	="home_nav" href="/"><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
 				</h1>
 
 				<!-- Kicker -->
@@ -58,6 +58,8 @@
 	<div id="preload2"></div>
 	<div id="preload3"></div>
 	<div id="preload4"></div>
+	<div id="preload5"></div>
+
 	
 	<!-- Javascript -->
 	<script src='js/main.js'></script>
