Links open in new tab

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div id="nav">
 					<h3><a id="github_nav" href="https://github.com/nathanshin" target="_blank"><img src="img/github_icon.png" alt="github"><span>nathanshin</span></a></h3>
 
-					<h3><a id="dribbble_nav" href="https://dribbble.com/nathanshin"><img src="img/dribbble_icon.png" alt="dribbble"><span>nathanshin</span></a></h3>
+					<h3><a id="dribbble_nav" href="https://dribbble.com/nathanshin" target="_blank"><img src="img/dribbble_icon.png" alt="dribbble"><span>nathanshin</span></a></h3>
 
 					<h3><a id="twitter_nav" href="https://twitter.com/nathanshin/" target="_blank"><img src="img/twitter_icon.png" alt="twitter"><span>@nathanshin</span></a></h3>
 
