--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Nathan Shin</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 	
 <body>
@@ -27,7 +29,7 @@
 
 				<!-- Main Heading -->
 				<h1>
-					<a id	="home_nav" href="/"><img id="brand_logo" src="img/brand.gif" alt="Nathan Shin"></a>
+					<a id	="home_nav" href="/"><img id="brand_logo" src="img/brand.png" alt="Nathan Shin"></a>
 				</h1>
 
 				<!-- Kicker -->
