--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Nathan Shin</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/> 
 </head>
 	
 <body>
