--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Nathan Shin</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/> 
+	<link rel='shortcut icon' href='favicon.png' type='image/png'/> 
 </head>
 	
 <body>
