Update nav brand

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 		<header>
 			<nav>
-				<a href=""><div id="nav-brand">NyS</div></a>
+				<a href=""><div id="nav-brand">ns</div></a>
 				<ul id="nav">
 					<li><a id="about_nav" href="">About Me</a></li>
 					<li><a id="blog_nav" href="">Blog</a></li>
